# enterprise-ai

./: .dockerignore  .env.example  .gitignore  ENTERPRISE-ARCHITECTURE-CONCERNS.md  IMPLEMENTATION-PLAN.md  README.md  alembic.ini  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260201_1458_41c5c62e094c_initial_schema.py  20260201_2041_d55da58278e9_change_kb_and_document_ids_to_string.py  20260202_0230_change_user_id_to_varchar.py  20260202_0310_add_kb_system_prompt.py  20260202_0515_add_jwks_table.py  20260202_1540_acd073136bee_add_grounded_only_to_knowledge_bases.py
deploy/: README.md
deploy/docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
deploy/helm/enterprise-ai-platform/: Chart.yaml  README.md  values-local.yaml  values-production.yaml  values.yaml
deploy/helm/enterprise-ai-platform/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-hpa.yaml  backend-pdb.yaml  backend-service.yaml  backend-serviceaccount.yaml  configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-pdb.yaml  frontend-service.yaml  frontend-serviceaccount.yaml  ingress.yaml  networkpolicy.yaml
deploy/kubernetes/: README.md
deploy/kubernetes/base/: kustomization.yaml  namespace.yaml
deploy/kubernetes/base/backend/: deployment.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/base/frontend/: deployment.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/base/shared/: configmap.yaml  networkpolicy.yaml
deploy/kubernetes/overlays/development/: kustomization.yaml
deploy/kubernetes/overlays/production/: hpa.yaml  ingress.yaml  kustomization.yaml  pdb.yaml
deploy/kubernetes/secrets/: .gitignore  secrets-template.yaml
dev/: .env.example  AZURE-AI-FOUNDRY-SETUP.md  Dockerfile.backend  Dockerfile.frontend  SETUP.md  docker-compose.yml
dev/clickhouse-config/: listen_host.xml
dev/init-scripts/: 01-init.sql
dev/scripts/: backend-entrypoint.sh  frontend-entrypoint.sh
docs/: ENVIRONMENT-VARIABLES.md  FRONTEND-ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  MISE-ENHANCEMENT-OPPORTUNITIES.md  README.md
docs/architecture/: AUTHENTICATION.md  FRONTEND-ARCHITECTURE.md  INFRASTRUCTURE-ALIGNMENT.md  MVP-ARCHITECTURE.md  RAG-PIPELINE.md
docs/development/: CONTRIBUTING.md
docs/reference/: DEPENDENCY-AUDIT.md  KB-CUSTOM-INSTRUCTIONS-TEMPLATE.md  MICROSOFT-REPOS-ANALYSIS.md
docs/setup/: AZURE-AI-FOUNDRY-SETUP.md  ENVIRONMENT-VARIABLES.md  SETUP.md
frontend/: .env.example  .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/api/auth/[...all]/: route.ts
frontend/src/app/api/v1/[...path]/: route.ts
frontend/src/app/knowledge-bases/: page.tsx
frontend/src/app/knowledge-bases/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: UserMenu.tsx
frontend/src/components/chat/: ChatArea.tsx  ChatLayout.tsx  KnowledgeBaseSelector.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx  StreamingMessage.tsx  index.ts
frontend/src/lib/: auth-client.ts  auth.ts  types.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/contexts/: UserContext.tsx
frontend/src/lib/hooks/: useChat.ts  useKnowledgeBases.ts  useSessions.ts
scripts/: check-env-sync.sh  seed_dev_data.py
src/agent/: runtime.py
src/api/: deps.py  main.py
src/api/routes/: __init__.py  chat.py  health.py  knowledge.py  sessions.py
src/auth/: better_auth.py  middleware.py  oidc.py  rbac.py
src/core/: config.py
src/core/caching/: semantic_cache.py
src/core/rate_limiting/: __init__.py  token_limiter.py
src/db/: database.py  models.py  repository.py
src/observability/: usage_tracker.py
src/rag/: __init__.py  embedder.py  extractors.py  processor.py  retriever.py  semantic_cache.py  vector_store.py
src/rag/chunking/: __init__.py
tests/: test_placeholder.py
